fixed column number bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@400;600;700&display=swap');
 
 
+h1 {
+  color: #fff;
+  font-size: 25px !important;
+}
+
 
 :root {
   --color-main: #f68657;
